# guile-xmlrpc

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  README.org  configure.ac  pkg-list.scm  pkg-list.scm.in  xmlrpc.scm
examples/: Makefile.am  client.scm  server.scm
src/: Makefile.am  xmlrpc.scm
xmlrpc/: Makefile.am  base64.scm  simple.scm  syntax.scm
xmlrpc/industria/: Makefile.am  base64.scm
